# finarius

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RUN.md  TEST_PLAN.md  config.yaml  personal_portfolio_app_spec.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.sh
.devcontainer/: devcontainer.json
finarius_app/: __init__.py  app.py
finarius_app/core/: __init__.py  config.py  exceptions.py  logger.py  utils.py
finarius_app/core/database/: __init__.py  connection.py  migrations.py  schema.py  utils.py
finarius_app/core/engine/: __init__.py  cash_flows.py  engine.py  portfolio_value.py  positions.py  pru.py
finarius_app/core/metrics/: __init__.py  dividends.py  metrics.py  realized_gains.py  returns.py  risk_metrics.py  unrealized_gains.py
finarius_app/core/models/: __init__.py  account.py  price.py  queries.py  transaction.py
finarius_app/core/prices/: __init__.py  analytics.py  cache.py  downloader.py  exceptions.py  normalization.py  scheduler.py  validation.py
finarius_app/ui/: __init__.py  accounts.py  error_handler.py  navigation.py  session_state.py  transactions.py
finarius_app/ui/accounts/: __init__.py  constants.py  forms.py  page.py  statistics.py  table.py
finarius_app/ui/analytics/: __init__.py  dividends.py  filters.py  gains.py  page.py  performance.py  positions.py  returns.py  risk.py
finarius_app/ui/dashboard/: __init__.py  charts.py  dividends.py  filters.py  metrics.py  overview.py  page.py  positions.py  transactions.py
finarius_app/ui/settings/: __init__.py  database.py  display.py  export_import.py  page.py  prices.py
finarius_app/ui/transactions/: __init__.py  constants.py  csv.py  filters.py  forms.py  page.py  table.py
portfolio_app/: __init__.py  app.py
portfolio_app/core/: __init__.py
tests/: __init__.py  test_config.py  test_database.py  test_engine.py  test_exceptions.py  test_logger.py  test_metrics.py  test_models.py  test_price_utilities.py  test_prices.py  test_ui_accounts.py  test_ui_analytics.py  test_ui_dashboard.py  test_ui_error_handler.py  test_ui_navigation.py  test_ui_session_state.py  test_ui_settings.py  test_ui_transactions.py  test_utils.py
